9e-Fixed mobile search form showing on tablet

--- a/css/style.css
+++ b/css/style.css
@@ -513,7 +513,7 @@ footer{
     }
 }
 
-@media (width > 768px){
+@media (width >= 768px){
     .search-form .mobile{
         display: none;
     }
